# aqueducts

./: .dockerignore  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  dist-workspace.toml  docker-compose.yml  execution.html  getting-started.html  index.html  justfile  mkdocs.yml  pipelines.html  release.toml  schema_reference.html  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: binaries.yml  build.yml  ci.yml  docker.yml  docs.yml  publish-crates.yml  release.yml
about/: index.html
aqueducts-cli/: Cargo.toml  README.md
aqueducts-cli/examples/: test_remote.sh
aqueducts-cli/src/: local_exec.rs  main.rs  remote_exec.rs  websocket_client.rs
aqueducts-executor/: Cargo.toml  README.md
aqueducts-executor/src/: auth.rs  config.rs  error.rs  executor.rs  handlers.rs  lib.rs  main.rs  progress.rs
aqueducts-executor/src/api/: auth.rs  health.rs  mod.rs  websockets.rs
aqueducts-executor/src/coordination/: auth.rs  managed.rs  mod.rs  standalone.rs
aqueducts-executor/src/execution/: manager.rs  mod.rs
aqueducts-executor/src/executor/: manager.rs  mod.rs  progress_tracker.rs  queue.rs
aqueducts-executor/tests/: api_tests.hurl  run_api_tests.sh
aqueducts/core/: Cargo.toml
aqueducts/core/src/: custom_udfs.rs  error.rs  lib.rs  prelude.rs  progress_tracker.rs  providers.rs  schema_transform.rs  serializable_schema.rs  templating.rs
aqueducts/core/src/destinations/: delta.rs  error.rs  file.rs  mod.rs  odbc.rs
aqueducts/core/src/execution/: mod.rs  traits.rs
aqueducts/core/src/execution/destinations/: mod.rs
aqueducts/core/src/execution/sources/: mod.rs
aqueducts/core/src/execution/stages/: mod.rs
aqueducts/core/src/model/: mod.rs
aqueducts/core/src/model/destinations/: error.rs  mod.rs
aqueducts/core/src/model/sources/: error.rs  mod.rs
aqueducts/core/src/model/stages/: error.rs  mod.rs
aqueducts/core/src/pipeline/: mod.rs  progress_tracker.rs  run.rs
aqueducts/core/src/sources/: error.rs  mod.rs
aqueducts/core/src/stages/: error.rs  mod.rs
aqueducts/core/src/store/: azure.rs  gcs.rs  mod.rs  s3.rs
aqueducts/core/tests/: destination_delta.rs  integration.rs  pipeline_integration.rs  store_integration.rs  store_manual_test.rs
aqueducts/core/tests/common/: mod.rs
aqueducts/core/tests/data/: aqueduct_pipeline_delta_append.yml  aqueduct_pipeline_delta_replace.yml  aqueduct_pipeline_delta_upsert.yml  example_1.csv
aqueducts/delta/: Cargo.toml
aqueducts/delta/src/: destination.rs  error.rs  handlers.rs  lib.rs  prelude.rs  source.rs
aqueducts/delta/tests/: integration.rs  integration_tests.rs
aqueducts/delta/tests/data/: aqueduct_pipeline_delta_append.yml  aqueduct_pipeline_delta_replace.yml  aqueduct_pipeline_delta_upsert.yml  example_2.csv
aqueducts/delta/tests/output/test_delta/1178148912681966605/test_table/col_1=a/: part-00001-013a50ad-2b97-41f3-bd73-dd8c9fa63a0c-c000.snappy.parquet  part-00001-57f333c4-f801-40d4-a998-8474c63f829a-c000.snappy.parquet
aqueducts/delta/tests/output/test_delta/1178148912681966605/test_table/col_1=b/: part-00001-0eabf789-fe4b-44ee-9f74-a537d03ddc97-c000.snappy.parquet  part-00001-4ded0977-b476-4169-994c-803b87baf3ba-c000.snappy.parquet
aqueducts/delta/tests/output/test_delta/1178148912681966605/test_table/col_1=c/: part-00001-10c29f3b-12a0-4f69-8190-5c15d5a5af6f-c000.snappy.parquet  part-00001-87cf366d-55f9-47dc-a6ac-eff6c26ac352-c000.snappy.parquet
aqueducts/delta/tests/output/test_delta/1178148912681966605/test_table/col_1=d/: part-00001-0ce367c3-fcf0-4b0b-bead-9dc8b2ab878f-c000.snappy.parquet  part-00001-f1bb4029-b36e-42e5-8ebb-21840f38a423-c000.snappy.parquet
aqueducts/formats/: Cargo.toml
aqueducts/formats/src/: csv.rs  error.rs  json.rs  lib.rs  parquet.rs  prelude.rs
aqueducts/meta/: Cargo.toml
aqueducts/meta/src/: lib.rs
aqueducts/odbc/: Cargo.toml
aqueducts/odbc/src/: destination.rs  error.rs  lib.rs  source.rs
aqueducts/protocol/: Cargo.toml
aqueducts/protocol/src/: lib.rs  prelude.rs
aqueducts/schema_gen/: Cargo.toml  build.rs
aqueducts/schemas/: Cargo.toml
aqueducts/schemas/src/: data_types.rs  destinations.rs  generate_schema.rs  lib.rs  location.rs  progress.rs  protocol.rs  serde_helpers.rs  sources.rs  stages.rs
aqueducts/schemas/tests/: integration.rs
aqueducts/server/: Cargo.toml
aqueducts/server/src/: config.rs  main.rs
aqueducts/server/static/js/: editor.js
aqueducts/storage/: Cargo.toml
aqueducts/storage/src/: error.rs  lib.rs  prelude.rs
aqueducts/utils/: Cargo.toml
aqueducts/utils/src/: lib.rs
aqueducts/web/: Cargo.toml
aqueducts/web/src/: lib.rs
aqueducts/websockets/: Cargo.toml
aqueducts/websockets/src/: lib.rs
architecture/: index.html
cli/: index.html
db/: init.sql
docker/: .dockerignore  Dockerfile  odbc.ini  odbcinst.ini
docker/db/: init.sql
docs/: architecture.md  cli.md  generate_schema_docs.py  index.md  mkdocs.yml  requirements.txt  schema_reference.md  storage.md  usage.md
docs/content/: execution.md  getting-started.md  index.md  pipelines.md
docs/content/includes/: abbreviations.md
docs/stylesheets/: extra.css
examples/: aqueduct_pipeline_example.json  aqueduct_pipeline_example.toml  aqueduct_pipeline_example.yml  aqueduct_pipeline_odbc.yml  aqueduct_pipeline_simple.yml  location_dict.csv  temp_readings_feb_2024.csv  temp_readings_jan_2024.csv
execution/: index.html
getting-started/: index.html
includes/: abbreviations.html
includes/abbreviations/: index.html
json_schema/: aqueducts.schema.json  generate_schema_reference.py
json_schema/schema_reference_template/: base.md  breadcrumbs.md  section_description.md  section_properties_details.md  tabbed_section.md
pipelines/: index.html
schema_reference/: index.html
search/: search_index.json
storage/: index.html
tools/schema-generator/: Cargo.toml
tools/schema-generator/src/: main.rs
usage/: index.html
(+1 files in other folders)
