[workspace]
members = [
  "aqueducts/core",
  "aqueducts/odbc",
  "aqueducts/utils",
  "aqueducts/schema_gen",
  "aqueducts/websockets",
  "aqueducts-cli",
  "aqueducts-executor"
]
resolver = "2"

[workspace.package]
authors = ["<vigimite@protonmail.com>"]
edition = "2021"
description = "Framework to build ETL data pipelines declaratively"
homepage = "https://github.com/vigimite/aqueducts"
repository = "https://github.com/vigimite/aqueducts"
readme = "README.md"
version = "0.9.0"
keywords = ["aqueducts", "ETL", "data", "pipeline"]
categories = ["api-bindings"]
license = "Apache-2.0"

[workspace.metadata.badges]
github = { repository = "vigimite/aqueducts", workflow = "build.yml" }

[workspace.dependencies]
# Internal crates
aqueducts = { path = "aqueducts/core", version = "0.9.0" }
aqueducts-odbc = { path = "aqueducts/odbc", version = "0.9.0" }
aqueducts-utils = { path = "aqueducts/utils", version = "0.9.0" }
aqueducts-websockets = { path = "aqueducts/websockets", version = "0.9.0" }

# Data processing libraries
datafusion = "46"
datafusion-functions-json = "0.46"
deltalake = { version = "0.25.0", features = ["datafusion"] }
arrow-odbc = "15.1.1"

# Serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.10"
toml = "0.8"
schemars = { version = "0.8", features = ["chrono", "url", "preserve_order"] }

# Async runtime and utilities
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# Network and API
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower = { version = "0.4.13", features = ["util"] }
http-body-util = "0.1.3"
tokio-tungstenite = "0.22.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2"
log = "0.4.21"
env_logger = "0.11.6"

# Error handling
thiserror = "2"
anyhow = "1.0.95"

# CLI utilities
clap = { version = "4.5.37", features = ["derive", "env"] }

# General utilities
regex = "1"
derive-new = "0.7"
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = "0.8"

# Testing
rstest = "0.25"
