[workspace]
members = [
  "aqueducts/meta",
  "aqueducts/core",
  "aqueducts/schemas",
  "aqueducts/odbc",
  "aqueducts/delta",
  "aqueducts-cli",
  "aqueducts-executor",
  "tools/schema-generator"
]
resolver = "2"

[workspace.package]
authors = ["<vigimite@protonmail.com>"]
edition = "2021"
description = "Framework to build ETL data pipelines declaratively"
homepage = "https://github.com/vigimite/aqueducts"
repository = "https://github.com/vigimite/aqueducts"
readme = "README.md"
version = "0.11.1"
keywords = ["aqueducts", "ETL", "data", "pipeline"]
categories = ["api-bindings"]
license = "Apache-2.0"

[workspace.metadata.badges]
github = { repository = "vigimite/aqueducts", workflow = "build.yml" }

[workspace.dependencies]
# Internal crates
aqueducts = { path = "aqueducts/meta", version = "0.11.1" }
aqueducts-schemas = { path = "aqueducts/schemas", version = "0.11.1" }
aqueducts-core = { path = "aqueducts/core", version = "0.11.1" }
aqueducts-delta = { path = "aqueducts/delta", version = "0.11.1" }
aqueducts-odbc = { path = "aqueducts/odbc", version = "0.11.1" }

# Data processing libraries
datafusion = "49"
datafusion-functions-json = "0.49"
deltalake = { rev = "1f0b4d0", git = "https://github.com/delta-io/delta-rs", features = ["datafusion"] }
arrow-odbc = "16.0.2"

# Serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.10"
toml = "0.8"
schemars = { version = "0.8", features = ["chrono", "url", "preserve_order"] }

# Async runtime and utilities
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# Network and API
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.3"
tokio-tungstenite = "0.26.2"
openssl = { version = "0.10", features = ["vendored"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2"

# Error handling
thiserror = "2"
miette = { version = "7.6" }

# CLI utilities
clap = { version = "4.5.39", features = ["derive", "env"] }

# General utilities
bon = "3.6.5"
regex = "1"
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rand = "0.8"

[profile.dist]
inherits = "release"
lto = "thin"
