[package]
name = "aqueducts-cli"
authors = ["<vigimite@protonmail.com>"]
edition = "2021"
description = "CLI application to run pipelines defined for the aqueducts framework"
homepage = "https://github.com/vigimite/aqueducts"
repository = "https://github.com/vigimite/aqueducts"
readme = "README.md"
version = "0.9.0"
keywords = ["aqueducts", "ETL", "data", "pipeline", "cli"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[features]
default = ["s3", "gcs", "azure", "yaml"]
s3 = ["aqueducts/s3"]
gcs = ["aqueducts/gcs"]
azure = ["aqueducts/azure"]
odbc = ["aqueducts/odbc"]
json = ["aqueducts/json"]
toml = ["aqueducts/toml"]
yaml = ["aqueducts/yaml"]

[dependencies]
datafusion.workspace = true
datafusion-functions-json.workspace = true

aqueducts.workspace = true
aqueducts-utils.workspace = true
aqueducts-websockets.workspace = true

clap.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-indicatif = "0.3.6"
indicatif = "0.17.8"

tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
futures-util.workspace = true

anyhow.workspace = true
uuid.workspace = true
url.workspace = true

tokio-tungstenite = { workspace = true, features = ["native-tls"] }

serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "aqueducts"
path = "src/main.rs"
