[package]
name = "aqueducts-executor"
authors = ["<vigimite@protonmail.com>"]
edition = "2021"
description = "Remote executor for the Aqueducts data pipeline framework"
homepage = "https://github.com/vigimite/aqueducts"
repository = "https://github.com/vigimite/aqueducts"
readme = "README.md"
version = "0.10.1"
keywords = ["aqueducts", "ETL", "data", "pipeline"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[features]
default = []
odbc = ["aqueducts/odbc"]

[dependencies]
aqueducts = { workspace = true, features = ["protocol", "json", "s3", "gcs", "azure", "delta", "custom_udfs"] }

axum.workspace = true
clap.workspace = true

datafusion.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
futures.workspace = true
futures-util.workspace = true

thiserror.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }

uuid.workspace = true
itertools = "0.14.0"
tower-http = { version = "0.6.4", features = ["trace"] }

openssl.workspace = true

[dev-dependencies]
futures.workspace = true
tower.workspace = true
http-body-util.workspace = true
