[package]
name = "aqueducts"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["yaml"]
s3 = ["aqueducts-utils/s3"]
gcs = ["aqueducts-utils/gcs"]
azure = ["aqueducts-utils/azure"]
odbc = ["aqueducts-odbc"]
schema_gen = ["schemars"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yml"]
toml = ["dep:toml"]

[dependencies]
# Data processing
datafusion.workspace = true
deltalake.workspace = true

# Serialization
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
url.workspace = true
regex.workspace = true
derive-new.workspace = true
chrono.workspace = true

# Internal crates
aqueducts-odbc = { workspace = true, optional = true }
aqueducts-utils.workspace = true

[dev-dependencies]
# Testing
tokio = { workspace = true, features = ["full"] }
rand.workspace = true
tracing-test.workspace = true