[package]
name = "aqueducts-core"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["yaml"]
s3 = ["object_store/aws", "aqueducts-delta?/s3"]
gcs = ["object_store/gcp", "aqueducts-delta?/gcs"]  
azure = ["object_store/azure", "aqueducts-delta?/azure"]
odbc = ["dep:aqueducts-odbc"]
delta = ["dep:aqueducts-delta"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yml"]
toml = ["dep:toml"]
custom_udfs = ["dep:datafusion-functions-json"]

[dependencies]
aqueducts-schemas.workspace = true

# Optional provider dependencies
aqueducts-delta = { workspace = true, optional = true }
aqueducts-odbc = { workspace = true, optional = true }

datafusion.workspace = true
datafusion-functions-json = { workspace = true, optional = true }
object_store = { version = "0.12", default-features = false }

serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

tokio.workspace = true

thiserror.workspace = true

tracing.workspace = true

url.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rand.workspace = true
tracing-test.workspace = true
tempfile = "3"
