[package]
name = "aqueducts-delta"
version = "0.9.0"
edition = "2021"
description = "Delta Lake integration for Aqueducts"
authors = ["Aqueducts Team"]
license = "Apache-2.0"

[features]
default = []
schema_gen = ["schemars"]

[dependencies]
aqueducts-storage = { path = "../storage" }
deltalake = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
derive-new = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
rand.workspace = true
