[package]
name = "aqueducts-delta"
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
deltalake.workspace = true
aqueducts-schemas.workspace = true
datafusion.workspace = true
thiserror.workspace = true
tracing.workspace = true

delta_kernel = "0.14.0"

[features]
default = []
s3 = ["deltalake/s3"]
gcs = ["deltalake/gcs"]
azure = ["deltalake/azure"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rand.workspace = true
tracing-test.workspace = true
serde_json.workspace = true
url.workspace = true
tempfile = "3"
