[package]
name = "aqueducts-odbc"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
datafusion.workspace = true
deltalake.workspace = true

serde.workspace = true

thiserror.workspace = true

tracing.workspace = true

arrow-odbc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test.workspace = true
