[package]
name = "aqueducts-odbc"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = []
odbc_tests = []

[dependencies]
aqueducts-schemas.workspace = true

datafusion.workspace = true
arrow-odbc.workspace = true

serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test.workspace = true
serde_json.workspace = true
