[package]
name = "schema_gen"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
build = "build.rs"
publish = false

[build-dependencies]
aqueducts = { workspace = true, features = ["schema_gen"] }
schemars.workspace = true
serde_json.workspace = true
