[package]
name = "aqueducts-utils"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[features]
default = []
s3 = ["deltalake/s3"]
gcs = ["deltalake/gcs"]
azure = ["deltalake/azure"]

[dependencies]
datafusion.workspace = true
deltalake.workspace = true
url.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test = "0.2"
