[package]
name = "aqueducts-utils"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = []
s3 = ["deltalake/s3"]
gcs = ["deltalake/gcs"]
azure = ["deltalake/azure"]

[dependencies]
# Data processing
datafusion.workspace = true
deltalake.workspace = true

# Utilities
url.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
# Testing
tokio = { workspace = true, features = ["full"] }
tracing-test.workspace = true