[package]
name = "aqueducts-web"
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
maud = { version = "0.27.0", features = ["axum"] }
