[package]
name = "schema-generator"
version = "0.1.0"
edition = "2021"
description = "Tool to generate JSON schema for Aqueducts configuration"
publish = false

[package.metadata.dist]
dist = false

[[bin]]
name = "generate-schema"
path = "src/main.rs"

[dependencies]
aqueducts-schemas = { path = "../../aqueducts/schemas", features = ["schema_gen"] }
schemars = { workspace = true }
serde_json = { workspace = true }